--- a/TestRMarkdownGitHub.Rmd
+++ b/TestRMarkdownGitHub.Rmd
@@ -2,7 +2,9 @@
 title: "RMarkdown in GitHub"
 author: "Bruce Kusko"
 date: "January 24, 2018"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
